Fix horizontal scrolling issue for large screens

--- a/src/web/rp.css
+++ b/src/web/rp.css
@@ -336,7 +336,6 @@ i.chara-icon-shadow {
 #welcome {
   margin: 3vh auto 0;
   padding: 20px;
-  width: 96vw;
   max-width: 400px;
 }
 #welcome a {
